fixed row gap

--- a/src/app/research/research.component.scss
+++ b/src/app/research/research.component.scss
@@ -467,6 +467,17 @@ input[type="radio"] {
   accent-color: $blue-1 !important;
 }
 
+.item-link {
+  color: #1673fd;
+  cursor: pointer;
+  font-size: 16px;
+}
+
+.item-link:hover {
+  text-decoration: underline;
+  color: rgb(26, 117, 253);
+}
+
 .page-link {
   width: 40px;
   height: 40px;
